<resources>
    <string name="app_name">My Application</string>
    <string name="account_hint">请输入账号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="login_but">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="sign_in">注册账号</string>
    <string name="account">账        号</string>
    <string name="pwd">密        码</string>
    <string name="hint_id">请输入用户名</string>
    <string name="Separator">|</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_repwd">请重复密码</string>
    <string name="repwd">重复密码</string>
    <string name="login_button">注册</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>