<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <com.google.android.material.button.MaterialButton
        android:layout_height="50dp"
        android:layout_width="50dp"
        app:icon="@drawable/ic_baseline_close_24"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/white"
        app:iconPadding="0dp"
        android:padding="0dp"
        app:iconGravity="textStart"
        android:stateListAnimator="@null"
        android:onClick="go"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/accoutfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/account_hint"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        app:layout_constraintWidth_percent="0.85"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#044F9E"
        app:met_floatingLabelTextSize="20dp"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pwdfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_hint"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintWidth_percent="0.85"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#044F9E"
        app:met_floatingLabelTextSize="20dp"
        />
    <Button
        android:id="@+id/btn_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_but"
        android:textSize="20sp"
        android:enabled="false"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.06"
        />
    <TextView
        android:id="@+id/Separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/btn_preview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/Separator"
        app:layout_constraintStart_toEndOf="@id/Separator"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/Separator"
        app:layout_constraintEnd_toEndOf="@id/Separator"
        />
</androidx.constraintlayout.widget.ConstraintLayout>